tests/NormalTests/paczka1/fuzzy1/34927819.err
Error in line 5: S706 S722 50,3
Error in line 11: 9TuF2y8BK A55 79,3
Error in line 34: AWI5Y A55 17,4
Error in line 30: 40v S453 98,5
Error in line 35: AWI5Y S706 30,2
Error in line 37: IfS8al4xn A55 86,5
